syntax = "proto3";

package sagitta2_raft;

service Raft {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesReply) {}
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteReply) {}
}

message AppendEntriesRequest {
  int64 term = 1;
  int64 leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}

message LogEntry {
  int64 term = 1;
  int64 index = 2;
  bytes command = 3;
}

message AppendEntriesReply {
  int64 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int64 term = 1;
  int64 candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteReply {
  int64 term = 1;
  bool voteGranted = 2;
}
